Fixed margins, sizes on small screens

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -41,5 +41,6 @@
 }
 
 .card__like-button:hover {
+  cursor: pointer;
   opacity: 0.5;
 }
