--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,3 +1,9 @@
 .content {
   margin-top: 50px;
 }
+
+@media (max-width: 600px) {
+  .content {
+    margin-top: 36px;
+  }
+}
