--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,9 +1,22 @@
 .header {
   border-bottom: 1px solid rgb(84 84 84 / 0.7);
-  height: 74px;
+  min-height: 74px;
 }
 
 .header__logo {
   width: 173px;
   min-height: 33px;
+}
+
+@media (max-width: 584px) {
+  .header {
+    margin: 0 -10px 0;
+    min-height: 56px;
+  }
+
+  .header__logo {
+    padding-left: 10px;
+    width: 126px;
+    min-height: 24px;
+  }
 }
