--- a/blocks/page.css
+++ b/blocks/page.css
@@ -9,3 +9,10 @@
   font-weight: normal;
   font-size: 18px;
 }
+
+@media (max-width: 600px) {
+  .page {
+    margin-top: 28px;
+    margin-bottom: 36px;
+  }
+}
