--- a/blocks/user.css
+++ b/blocks/user.css
@@ -23,17 +23,21 @@
   height: 100%;
 }
 
-.user__name {
-  margin: 0;
+.user__wrapper {
   display: flex;
   gap: 18px;
   align-items: center;
+}
+
+.user__name {
+  margin: 0;
   font-weight: 500;
   font-size: 42px;
   line-height: 1.14;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 100%;
 }
 
 .user__name-changer {
@@ -45,25 +49,16 @@
 }
 
 .user__name-changer:hover {
+  cursor: pointer;
   opacity: 0.6;
 }
 
 .user__status {
   margin: 0;
-}
-
-@media (max-width: 584px) {
-  .user {
-    justify-content: center;
-  }
-
-  .user__name {
-    font-size: 22px;
-  }
-
-  .user__info {
-    align-items: center;
-  }
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .user__add-picture {
@@ -76,7 +71,31 @@
 }
 
 .user__add-picture:hover {
+  cursor: pointer;
   opacity: 0.6;
+}
+
+@media (max-width: 584px) {
+  .user {
+    justify-content: center;
+  }
+
+  .user__name {
+    font-size: 22px;
+  }
+
+  .user__name-changer {
+    width: 18px;
+    height: 18px;
+  }
+
+  .user__info {
+    align-items: center;
+  }
+
+  .user__add-picture {
+    background-size: 16px;
+  }
 }
 
 @media (max-width: 764px) {
